--- a/build.gradle
+++ b/build.gradle
@@ -4,19 +4,21 @@ group 'com.github.rougsig.devtools'
 version '1.0'
 
 buildscript {
-    ext.kotlin_version = '1.3.11'
-    repositories {
-        mavenCentral()
-        jcenter()
-    }
+  ext.kotlin_version = '1.3.11'
+  repositories {
+    mavenCentral()
+    jcenter()
+  }
 
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
+  dependencies {
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+  }
 }
 
 allprojects {
-    repositories {
-        mavenCentral()
-    }
+  repositories {
+    mavenCentral()
+  }
 }
+
+apply from: rootProject.file('gradle/deps.gradle')
