--- a/gradle/deps.gradle
+++ b/gradle/deps.gradle
@@ -14,4 +14,9 @@ ext {
       kotlin,
       rxJava
   ]
+
+  network = [
+      "io.javalin:javalin:2.4.0",
+      "org.slf4j:slf4j-simple:1.7.25"
+  ]
 }
