--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
 rootProject.name = 'dev-tools'
-include ':app', ':core', ':entities', ':domain', ':network'
+include ':app', ':core', ':domain', ':network'
